# skyway

./: .gitignore  Cargo.toml  README.MD
src/: bridge.rs  image.rs  main.rs  settings.rs
src/backend/: blob.rs  feeds.rs  following.rs  login.rs  main.rs  mod.rs  profile.rs  record.rs  simple_actions.rs  thread.rs  timeline.rs
src/backend/responses/: mod.rs
src/backend/responses/timeline/: mod.rs  reason.rs  reply.rs
src/backend/responses/timeline/embed/: mod.rs
src/defs/: mod.rs
src/defs/atproto/label/: defs.rs
src/defs/bsky/: mod.rs
src/defs/bsky/actor/: defs.rs
src/defs/bsky/embed/: external.rs  images.rs  mod.rs  record.rs  record_with_media.rs  video.rs
src/defs/bsky/embed/record/: mod.rs  record.rs
src/defs/bsky/feed/: defs.rs  mod.rs
src/defs/bsky/graph/: defs.rs
src/defs/bsky/richtext/: facet.rs  mod.rs
src/frontend/: bridge_proc.rs  main.rs  mod.rs
src/frontend/flyouts/: composer.rs
src/frontend/modals/: deceptive_link.rs  important_error.rs  login.rs  mod.rs
src/frontend/pages/: landing.rs  mod.rs  profile.rs  profile_list.rs  thread.rs  timeline.rs
src/frontend/pages/media/: image.rs  mod.rs  video.rs
src/frontend/viewers/: feed_post.rs  mod.rs  post.rs  profile.rs  profile_picture.rs
src/frontend/viewers/embeds/: external.rs  images.rs  mod.rs  record.rs  video.rs
src/widgets/: click_context_menu.rs  mod.rs  spinner.rs
