[package]
name = "skyway"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "puffin",
] }
keyring = "2.3.3"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
image = "0.25.1"
directories = "5.0.1"
chrono = { version = "0.4.38", features = [ "serde" ] }
reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22.1"

puffin = "0.19"
puffin_http = "0.16"